# warehouse_sim

./: .rmf_schedule_node.yaml  .~lock.task_log.csv#  10_robot_manual.csv  34_random.csv  README.md  task_log.csv
ign_sim/: CMakeLists.txt  package.xml
ign_sim/config/: tinyRobot_config.yaml
ign_sim/launch/: dispatch_loop.launch.py  simulation.launch.xml  v2.launch.xml  warehouse.launch.xml
ign_sim/maps/: 0.yaml  v2 copy.world  v2.building.yaml  v2.world
ign_sim/maps/v2_L1/: model.config  model.sdf
ign_sim/maps/v2_L1/meshes/: model.material
ign_sim/models/TinyRobot/: model.sdf
ign_sim/scripts/: observer.py
rmf_sim/: CMakeLists.txt  package.xml
rmf_sim/config/: agv_config.yaml  def.rviz
rmf_sim/launch/: fleet_adapter.xml  rmf.launch.xml  warehouse_sim.launch.xml
rmf_sim/map/: 0.yaml  v2.building.yaml
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: agv.rviz  robots.yaml  v1.yaml
robot_bringup/launch/: fleet_client.launch.py  fleet_server.launch.py  map.launch.py  robot_bringup.launch.py  robots.launch.py
robot_bringup/urdf/: cloudy_v2_core.xacro  diffbot_system.urdf.xacro
robot_control/: package.xml  setup.py
robot_control/robot_control/: battery_simulator.py  fake_action_client.py  fake_action_server.py  move_to_waypoint.py  state_publisher.py
robot_interfaces/: CMakeLists.txt  package.xml
robot_interfaces/msg/: RobotState.msg
